# masix

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  IDENTITY.md  LICENSE  MEMORY.md  README.md  RULES.md  SOUL.md  docker-compose.standard.yml
.cargo/: config.toml
.github/workflows/: release-stt-whisper-assets.yml
backups/openclaw-md-restore-2026-02-27/: RESTORE_MANIFEST.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-backup/backup-openclaw-20260220-180736/: README.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-telegram-telegram-default--60504446/: IDENTITY.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-telegram-telegram-group--4-ca56f587/: AGENTS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-welladevassist-admin-teleg-fac198c1/: SOUL.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-cloud-owner-whats-2d7cf1e0/: AGENTS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-cloud-whatsapp-cl-47071acf/memory/: README.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-cloud-whatsapp-cl-add6479f/: SOUL.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-cloud-whatsapp-cl-b9422abd/: IDENTITY.md  USER.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-cloud-whatsapp-cl-f4d216e7/: TOOLS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-subagent-17b4ba1a-b0a56407/: TOOLS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-whatsapp-default--b2c633ae/: AGENTS.md  IDENTITY.md  USER.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/sandboxes/agent-whatsapp-whatsapp-default--b2c633ae/memory/: 2026-02-19.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-talk/: MEMORY.md  SOUL.md  USER.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-talk/memory/: 2026-02-06.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-telegram/: ARTE.md  CORREZIONI.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  VERITA.md  WORK.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-telegram/memory/: 2026-02-07.md  2026-02-12.md  2026-02-16.md  CORREZIONI.md  INPUTS_TRUSTED.md  PAX_JUDAICA.md  VERITA.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-wellabot/: AGENTS.md  SOUL.md  USER.md  VERITA.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/: AGENTS.md  TOOLS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/memory/: README.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/memory/contacts/: +393471443005.md  +393924912119.md  README.md  TEMPLATE.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/memory/context/: wellanet-company-profile.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/memory/policies/: whatsapp-security.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-welladevassist/memory/reports/: README.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-whatsapp/: AGENTS.md  CUSTOMERS.md  MEMORY.md  README.md  SECRETS.md  SOUL.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-whatsapp-cloud/: AGENTS.md  TOOLS.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-whatsapp-cloud/memory/policies/: whatsapp-security.md
backups/openclaw-md-restore-2026-02-27/from-openclaw-data/.openclaw/workspace-whatsapp/memory/: 2026-02-06.md  2026-02-10.md  2026-02-11.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-18.md  incident-MKAI-2026-02-11.md  incidents.md
config/: config.example.toml
crates/masix-cli/: Cargo.toml
crates/masix-cli/src/: logging.rs  main.rs  plugins.rs
crates/masix-config/: Cargo.toml
crates/masix-config/src/: lib.rs
crates/masix-core/: Cargo.toml
crates/masix-core/src/: builtin_tools.rs  lib.rs
crates/masix-core/src/search/: cache.rs  doh.rs  engines.rs  mod.rs  torrent.rs
crates/masix-cron/: Cargo.toml
crates/masix-cron/src/: lib.rs
crates/masix-exec/: Cargo.toml
crates/masix-exec/src/: lib.rs
crates/masix-intent/: Cargo.toml
crates/masix-intent/src/: lib.rs
crates/masix-ipc/: Cargo.toml
crates/masix-ipc/src/: lib.rs
crates/masix-mcp/: Cargo.toml
crates/masix-mcp/src/: lib.rs
crates/masix-policy/: Cargo.toml
crates/masix-policy/src/: lib.rs
crates/masix-providers/: Cargo.toml
crates/masix-providers/src/: lib.rs
crates/masix-sms/: Cargo.toml
crates/masix-sms/src/: lib.rs
crates/masix-storage/: Cargo.toml
crates/masix-storage/src/: lib.rs
crates/masix-telegram/: Cargo.toml
crates/masix-telegram/src/: lib.rs  menu.rs
crates/masix-wasm-tools/: Cargo.toml
crates/masix-wasm-tools/src/: lib.rs
crates/masix-whatsapp/: Cargo.toml  whatsapp-transport.js
crates/masix-whatsapp/src/: lib.rs
docker/: entrypoint.sh
docker/env/: .env.example
docker/memory/: MEMORY.md  SOUL.md
docker/memory/knowledge/: README.md
docs/: COMMANDS_REFERENCE.md  CONFIG_EXAMPLE_POWER.md  CONFIG_FILES_REFERENCE.md  DOCKER_TELEGRAM_STANDARD.md  HOMEBREW.md  TERMUX_LLAMA_CPP_LOCAL_ENDPOINT.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md
memory/default/: MEMORY.md
npm/masix-termux/: .npmignore  README.md  check-update.js  install.js  package.json
scripts/: build_stt_whisper_asset.sh  build_termux.sh  generate_homebrew_formula.sh
(+30 files in other folders)
