[workspace]
resolver = "2"
members = [
    "crates/masix-core",
    "crates/masix-config",
    "crates/masix-storage",
    "crates/masix-policy",
    "crates/masix-exec",
    "crates/masix-intent",
    "crates/masix-ipc",
    "crates/masix-providers",
    "crates/masix-mcp",
    "crates/masix-cron",
    "crates/masix-telegram",
    "crates/masix-cli",
]
default-members = [
    "crates/masix-core",
    "crates/masix-config",
    "crates/masix-storage",
    "crates/masix-policy",
    "crates/masix-exec",
    "crates/masix-intent",
    "crates/masix-ipc",
    "crates/masix-providers",
    "crates/masix-mcp",
    "crates/masix-cron",
    "crates/masix-telegram",
    "crates/masix-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DioNanos/masix"
homepage = "https://github.com/DioNanos/masix"
keywords = ["messaging", "telegram", "termux", "ai", "cron"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client (rustls for Termux compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
base64 = "0.22"
url = "2.5"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
cron = "0.12"
shlex = "1.3"

# MCP
serde_repr = "0.1"

# WASM
wasmi = "0.40"
