# Masix Cron

[package]
name = "masix-cron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
masix-storage = { path = "../masix-storage" }
masix-ipc = { path = "../masix-ipc" }
chrono.workspace = true
regex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
