# Masix Telegram Adapter

[package]
name = "masix-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
masix-ipc = { path = "../masix-ipc" }
masix-storage = { path = "../masix-storage" }
masix-config = { path = "../masix-config" }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
